# clitter

./: CLAUDE.md  README.md  makefile
.claude/: setup.json
.github/workflows/: build.yml
clitter/: .gitignore  BUILD_WINDOWS.md  LICENSE  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
clitter/.github/workflows/: release.yml
clitter/docs/: DESIGN.md
clitter/scripts/: build-windows.ps1  dev-windows.ps1  generate-icons.js
clitter/src/: App.svelte
clitter/src-tauri/: Cargo.toml  tauri.conf.json
clitter/src-tauri/capabilities/: default.json
clitter/src-tauri/icons/: README.md
clitter/src-tauri/src/: commands.rs  lib.rs  main.rs  tray.rs  types.rs  window_focus.rs
clitter/src-tauri/src/clipboard/: categorizer.rs  mod.rs  monitor.rs  windows_clipboard.rs
clitter/src-tauri/src/crypto/: mod.rs  secure_store.rs
clitter/src-tauri/src/hotkey/: mod.rs
clitter/src-tauri/src/storage/: persistent.rs  volatile.rs
clitter/src/lib/components/: CategoryTabs.svelte  ClipboardItem.svelte  ClipboardList.svelte  ContextMenu.svelte  Group.svelte  SettingsModal.svelte  ShortcutEditModal.svelte  StickyNote.svelte  Whiteboard.svelte
clitter/src/lib/stores/: clipboard.ts  ui.ts  whiteboard.ts
clitter/src/lib/types/: index.ts
clitter/src/styles/: global.css
