[package]
name = "clitter"
version = "0.1.0"
description = "A clipboard management system"
authors = ["Clitter Team"]
edition = "2021"

[lib]
name = "clitter_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2.2"
tauri-plugin-shell = "2.2"
arboard = { version = "3", features = ["image-data"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "sync"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.9"
base64 = "0.22"
regex = "1"
thiserror = "2"
directories = "6"
once_cell = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_Graphics_Gdi"] }
ctrlc = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
